syntax = "proto3";  // 定義要使用的 protocol buffer 版本

package protobuf;  // for name space
//option go_package = "proto/todolist";  // generated code 的 full Go import path
//import "google/protobuf/timestamp.proto";



message CreateRequest {
  string matter = 1;
  string endTime = 2;
  string finishedCondition =3;
  string status =4;
  string createTime=5;
  string email=6;
}

message CreateResponse {
    int32 resMessage =1;
}

message GetRequest {
  string email=1;
}

message GetResponse {
  repeated GetResult GetResult=1;
}

message GetResult{
  string id=1;
  string matter=2;
  string endTime=3;
  string finishedCondition=4;
  string status=5;
  string email=6;
  string note =7;
  string createTime=8;
  string updateTime=9;
}

message UpdateRequest {
    string id = 1;
    string finishedCondition = 2;
    string note = 3;
    string email = 4;
}  

message UpdateResponse {
    int32 resMessage =1;

}

message DeleteRequest {
  string id = 1;
  string email=2;
}

message DeleteResponse {
    int32 resMessage =1;
}

service TodoListService {
  rpc CreateTodolist(CreateRequest) returns (CreateResponse);
  rpc GetManyTodolist(GetRequest) returns (GetResponse);
  rpc UpdateTodolist(UpdateRequest) returns (UpdateResponse);
  rpc DeleteTodolist(DeleteRequest) returns (DeleteResponse);
}